--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,19 @@
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.owasp</groupId>
+        <artifactId>dependency-check-maven</artifactId>
+        <version>5.3.2</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    
       <!-- Add generated source directories -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
